# local-ai-llm-playground

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  _typos.toml  deny.toml  dprint.json  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: general.yml  links.yml  pre-commit.yml  scheduled-audit.yml  scorecard.yml  typos.yml  validate-licenses.yml
crates/llamacpp_gemma3_4b_completion/: Cargo.toml  README.md
crates/llamacpp_gemma3_4b_completion/src/: cli.rs  main.rs  model.rs  ui.rs
crates/llamacpp_gemma3_4b_completion/src/snapshots/: llamacpp_gemma3_4b_completion__model__tests__llama_cpp_contacts_server_and_processes_response_as_expected.snap
crates/llamacpp_gemma3_4b_completion/src/test_fixtures/: nonstreaming_response.json
crates/llamacpp_gemma4_e4b_completion/: Cargo.toml  README.md
crates/llamacpp_gemma4_e4b_completion/src/: main.rs  model.rs  ui.rs
crates/llamacpp_gemma4_e4b_completion/src/snapshots/: llamacpp_gemma3_4b_completion__model__tests__llama_cpp_stream_contacts_server_and_processes_response_as_expected.snap  llamacpp_gemma4_e4b_completion__model__tests__llama_cpp_contacts_server_and_processes_response_as_expected.snap  llamacpp_gemma4_e4b_completion__model__tests__llama_cpp_stream_contacts_server_and_processes_response_as_expected.snap
python/llamacpp_tts/: README.md  pyproject.toml
python/llamacpp_tts/src/: main.py
python/llamacpp_tts/test/: test_llamacpp_tts.py
python/ollama_mistral_instruct_chat/: README.md  pyproject.toml
python/ollama_mistral_instruct_chat/src/: main.py
python/ollama_mistral_instruct_chat/test/: test_ollama_mistral_instruct_chat.py
