[workspace]
resolver = "3"
members = ["crates/llamacpp_gemma4_e4b_completion"]

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
print_stdout = "deny"
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

[workspace.package]
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/local-ai-llm-playground"
# eventsource-client 0.17.5 requires Rust 1.94.0
rust-version = "1.94.0"
description = "Experiments will local LLMs in Python and Rust"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.11"
eventsource-client = "0.17.5"
futures-util = "0.3.32"
http = "1.4.2"
humantime = "2.3.0"
indicatif = "0.18.4"
insta = { version = "1.48.0", features = ["filters", "glob", "json"] }
jiff = { version = "0.2.29", features = ["serde"] }
launchdarkly-sdk-transport = "0.1.4"
log = "0.4.33"
miette = { version = "7.6.0", features = ["fancy"] }
mocktail = "0.3.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
wiremock = "0.6.5"

# Faster snapshot runs
# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3
