# based on https://github.com/JasperHG90/uv-monorepo/blob/main/pyproject.toml
# MIT License
#
# Copyright (c) [2024] [Jasper Ginn]
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[project]
name = "local-ai-llm-playground"
version = "0.1.0"
description = "Experiments running offline LLMs in Python and Rust locally"
readme = "README.md"
requires-python = ">=3.10.0,<3.13.0"
dependencies = [
  "ollama>=0.6.1",
]

[dependency-groups]
dev = [
  "coverage>=7.13.4",
  "httpx>=0.25.0",
  "mypy>=1.20.1",
  "requests>=2.32.5",
  "respx>=0.22.0",
]

[tool.uv.sources]
ollama_mistral_instruct_chat = { workspace = true }
llamacpp_tts = { workspace = true }

[tool.uv.workspace]
members = ["python/*"]

[tool.uv]
package = false

[[tool.mypy.overrides]]
module = ["outetts.*"]
follow_untyped_imports = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.flake8-type-checking]
strict = true
