[package]
name = "llamacpp-gemma3-4b-completion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
path = "src/main.rs"
name = "llamacpp-gemma3-4b-completion"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger.workspace = true
eventsource-client.workspace = true
futures-util.workspace = true
humantime.workspace = true
indicatif.workspace = true
log.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wiremock.workspace = true

[dev-dependencies]
http.workspace = true
insta.workspace = true
mocktail.workspace = true
wiremock.workspace = true
