[project]
name = "ollama-mistral-instruct-chat"
version = "0.1.0"
description = "Large Language Model chat demo calling local Ollama server from Python code."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "chromadb>=1.0.21",
  "fastembed>=0.7.3",
  "langchain>=0.3.27",
  "langchain-community>=0.3.29",
  "langchain-ollama>=0.3.8",
  "ollama>=0.5.3",
]
